--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -59,7 +59,7 @@
   --anzhiyu-radius: 8px;
   --anzhiyu-border-radius: 8px;
   --anzhiyu-main: var(--anzhiyu-theme);
-  --anzhiyu-main-op: var(--anzhiyu-theme-op);
+  --anzhiyu-main-op: #504bf2de;
   --anzhiyu-shadow-theme: 0 8px 12px -3px var(--anzhiyu-theme-op);
   --anzhiyu-shadow-main: 0 8px 12px -3px var(--anzhiyu-main-op);
   --anzhiyu-shadow-blue: 0 8px 12px -3px rgba(40, 109, 234, 0.2);
