--- a/layout/includes/anzhiyu/log-js.pug
+++ b/layout/includes/anzhiyu/log-js.pug
@@ -16,22 +16,64 @@ script.
     const days = (now1 - grt) / 1000 / 60 / 60 / 24;
     const dnum = Math.floor(days);
     const ascll = [
-      `欢迎使用安知鱼!`,
+      `欢迎来到本站!`,
       `生活明朗, 万物可爱`,
       `
-          
-         █████╗ ███╗   ██╗███████╗██╗  ██╗██╗██╗   ██╗██╗   ██╗
-        ██╔══██╗████╗  ██║╚══███╔╝██║  ██║██║╚██╗ ██╔╝██║   ██║
-        ███████║██╔██╗ ██║  ███╔╝ ███████║██║ ╚████╔╝ ██║   ██║
-        ██╔══██║██║╚██╗██║ ███╔╝  ██╔══██║██║  ╚██╔╝  ██║   ██║
-        ██║  ██║██║ ╚████║███████╗██║  ██║██║   ██║   ╚██████╔╝
-        ╚═╝  ╚═╝╚═╝  ╚═══╝╚══════╝╚═╝  ╚═╝╚═╝   ╚═╝    ╚═════╝
-          
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                              |                                    
+                                                                                                                                                                      |||                                     |||  |||                   ||||      
+                                                                                                                                                                      |||                                     |||  ||||                   ||||     
+                                                 |||      |||                               |||                                           |||                         ||                           |||        ||||||||||                  ||||     
+               ||||||||||   |||||||||  ||||    |||||    |||||                             |||||                                           ||||                       ||| |||                       ||||     |||||||| |||            |      |||   ||
+               ||||||||||   |||||||||  ||||    |||||    |||||                             |||||                                           ||||                       ||||||||                       |||    ||||||||                |||  |||||||||||
+                  ||||         |||     ||||      |||      |||                               |||                                            |||                      |||||||        ||||             |||       ||||||||             ||||||||||||||||
+                  ||||         |||               |||      |||                               |||                                            ||                      ||||||    ||||||||||||           ||   ||||||||||||||           ||||||||        |
+                  ||||         ||                |||      |||                               |||                                            ||                      ||| ||  |  ||||   ||||           ||   |||||||   ||||           |||   |||      ||
+                   ||||       |||                |||      |||                               |||                                            ||                     ||   |||||| |||   ||||            ||||||||||||||||||            |||   ||||       
+                   ||||       ||         ||      |||      |||                               |||         |||                                ||                      |||||||||| |||   |||          ||||||||||||||||| |||            ||    |||| |||   
+                    ||||      ||        |||      |||      |||        |||||||          |||||||||       |||||||                       |      ||   |||            ||||||||||||    ||||||||        |||||||||  ||  ||||||||            ||    |||||||||  
+                    ||||     |||      |||||      |||      |||      ||||||||||        ||||||||||      |||   |||                     ||      ||    ||||          |||||| || ||||  ||||||||        |||||||    |||||||||||                  ||   |||||  
+                     |||     ||       |||||      |||      |||     ||||    ||||      |||    ||||     |||     |||                    |||     ||     ||||          ||   ||| ||||  ||||||               ||    || |||  |||                 ||||| ||||   
+                     ||||   |||         |||      |||      |||     |||      ||||    |||      |||    ||||||||||||                   ||||     ||     |||||              |||  |||  ||                   ||    ||  ||||||                 ||||||||||    
+                     ||||   |||         |||      |||      |||    ||||       |||    |||      |||    ||||||||||||                   |||      ||      ||||             |||                             ||     |  ||||||||||||          |||  |||||     
+                      ||||  ||          |||      |||      |||    ||||       |||   ||||      |||    |||                           ||||      ||       ||||           |||      |||||||                 ||||||||||||||||||||||          |     ||||||   
+                      |||| |||          |||      |||      |||    ||||       |||   ||||      |||    |||            |||||||||      ||||      ||       ||||          |||  |||||||||||||                |||||||||||  |||                    |||||||||| 
+                       ||||||           |||      |||      |||    ||||       |||   ||||      |||    ||||           |||||||||     ||||       ||        |||         |||   ||||     ||||                || ||| |||   |||                   ||||   |||||
+                       ||||||           |||      |||      |||    ||||       |||   ||||      |||    ||||       |                 ||||       ||                   ||     ||       |||                |||      |||  |||                  ||||     ||||
+                        |||||           |||      |||      |||     |||      ||||    ||||     |||     ||||     ||                  ||        ||                          ||||||||||||                |||      |||| |||                ||||| |||||||||
+                        ||||            |||      |||      |||     ||||     |||     |||||   ||||     ||||||||||                         |   ||                          |||||||| |||                |||       ||| |||              |||||||||||||||||
+                        ||||         |||||||| ||||||||||||||||||   ||||  ||||       |||||||||||||    ||||||||                          ||||||                          ||       |||                |||        |  |||           |||||| |||     |||||
+                         ||          |||||||| ||||||||||||||||||    ||||||||          ||||| ||||       |||||                            |||||                          ||     | |||                |||        || |||          ||||    |||     |||| 
+                         ||                                                                                                              ||||                          ||||||||||||                |||        ||||||                  |||    ||||  
+                                                                                                                                         ||||                          ||||||||||||                ||          |||||                   ||||||||||| 
+                                                                                                                                          |||                          ||      ||||                 |          ||||                    ||||||||||  
+                                                                                                                                                                               |||                              |||                    ||          
+                                                                                                                                                                                |                                                                  
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+                                                                                                                                                                                                                                                   
+
           `,
       "已上线",
       dnum,
       "天",
-      "©#{since} By 安知鱼 V#{version}",
+      "©#{since} By Villode V#{version}",
     ];
     const ascll2 = [`NCC2-036`, `调用前置摄像头拍照成功，识别为【小笨蛋】.`, `Photo captured: `, `🤪`];
 
@@ -64,7 +106,7 @@ script.
     setTimeout(
       console.warn.bind(
         console,
-        "%c ⚡ Powered by 安知鱼 %c 你正在访问 #{author} 的博客.",
+        "%c ⚡ Powered by Villode %c 你正在访问 #{author} 的博客.",
         "color:white; background-color:#f0ad4e",
         ""
       )
