--- a/layout/includes/page/album.pug
+++ b/layout/includes/page/album.pug
@@ -3,9 +3,9 @@
   .author-content.author-content-item.album.single(style=`${album_background ? `background: url(${album_background}) top / cover no-repeat;` : ""}`)
     .card-content
       .author-content-item-tips 相册集
-      span.author-content-item-title 这里是我的相册集哦😯
+      span.author-content-item-title 时间仍在 是我们飞逝🛫 ~ 
       .content-bottom
-        .tips 每一张照片都是一次美好的记忆。
+        .tips 每一张照片都是一次美好的记忆🤗。
       .banner-button-group
         a.banner-button(onclick='pjax.loadUrl("/about/")')
           i.anzhiyufont.anzhiyu-icon-arrow-circle-right(style='font-size: 1.5rem')
