--- a/source/css/_mode/darkmode.styl
+++ b/source/css/_mode/darkmode.styl
@@ -43,7 +43,8 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
       pointer-events: none
     
     #footer
-      background-color: var(--anzhiyu-card-bg);
+     backdrop-filter: blur(5px);
+     -webkit-backdrop-filter: blur(5px);
 
     #article-container
       pre > code
@@ -68,12 +69,12 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
     #page-header
       &.nav-fixed > #nav,
       &.not-top-img > #nav
-        background: var(--anzhiyu-black);
+        
         box-shadow: 0 5px 6px -5px rgba(133, 133, 133, 0)
     .post
       #page-header
         &.nav-fixed > #nav
-          background: var(--anzhiyu-card-bg);
+          background: #1d1e228c;
           box-shadow: none
     #post-comment
       .comment-switch
